# nlp_allocine

./: .gitignore  README.md  allocine_scraper_class.py  factories.py  main.ipynb  pyproject.toml  requirements_nlp.txt  requirements_scraping.txt  scraper_notebook.ipynb
data/init_data/: critics.parquet
functions/: __init__.py  data_functions.py  plot_functions.py  stat_functions.py
scraper/: pyvenv.cfg
scraper/Scripts/: activate  activate.bat
utils_dataclasses/: __init__.py  treatment_dataclasses.py
web_scraping/: allocine_scraper_class.py  scraper_notebook.ipynb
