[project]
name = "nlp-timeseries-project"
version = "0.1.0"
description = "Template Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch>=7.2.0",
    "black>=25.1.0",
    "bs4>=0.0.2",
    "fastparquet>=2024.11.0",
    "gensim>=4.3.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "statsmodels>=0.14.4",
    "torch>=2.7.1",
    "vadersentiment>=3.3.2",
    "vadersentiment-fr>=1.3.4",
    "wordcloud>=1.9.4",
    "yellowbrick>=1.5",
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
  \.venv
  | \.git
  |.gitignore
  | __pycache__
  | \.ipynb_checkpoints
)/
'''
